@@ -12,13 +12,14 @@ import java.util.Map;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Function;
 
-public class Day14 extends Day<Long, Long> {
+public class Day14 implements Day<Long, Long> {
 
     public static final String ARROW = " -> ";
     private final Map<String, String> formulas;
+    private final List<String> input;
 
     public Day14(List<String> input) {
-        super(input);
+        this.input = input;
         formulas = getFormulas();
     }
 
@@ -33,7 +34,7 @@ public class Day14 extends Day<Long, Long> {
     }
 
     private long iterateTimes(int times) {
-        var polymer = input.get(0);
+        var polymer = input.getFirst();
         Map<String, AtomicLong> pairs = new HashMap<>();
         var polymerLetters = polymer.split("");
         for (int i = 1; i < polymerLetters.length; i++) {
