@@ -1,6 +1,7 @@
 package org.theoriok.adventofcode.y2021;
 
 import static java.util.Comparator.comparing;
+import static org.theoriok.adventofcode.util.Utils.splitToList;
 import static org.theoriok.adventofcode.y2021.Day24Old.Variable.Z;
 
 import com.google.common.collect.Iterators;
@@ -18,13 +19,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
 
-public class Day24Old extends Day<Long, Long> {
+public class Day24Old implements Day<Long, Long> {
 
     private final List<InstructionSet> instructionSets;
 
     public Day24Old(List<String> input) {
-        super(input);
         instructionSets = new ArrayList<>();
         var operations = input.stream()
             .map(this::toOperation)
@@ -35,14 +36,18 @@ public class Day24Old extends Day<Long, Long> {
     }
 
     private Operation toOperation(String line) {
-        var strings = Arrays.stream(line.split(" ")).toList();
-        var operator = Operator.fromString(strings.get(0));
+        var strings = split(line);
+        var operator = Operator.fromString(strings.getFirst());
         return new Operation(operator, strings.subList(1, strings.size()));
+    }
+
+    private static List<String> split(String line) {
+        return splitToList(line, " ", Function.identity());
     }
 
     @Override
     public Long firstMethod() {
-        var instructionSet = instructionSets.get(0);
+        var instructionSet = instructionSets.getFirst();
         for (short i = 9; i > 0; i--) {
             instructionSet.run((short) 0, i);
             runForAllOutputs(1, instructionSet.getInputToOutput().values());
@@ -82,7 +87,7 @@ public class Day24Old extends Day<Long, Long> {
 
     @Override
     public Long secondMethod() {
-        var instructionSet = instructionSets.get(0);
+        var instructionSet = instructionSets.getFirst();
         for (short i = 1; i <= 9; i++) {
             instructionSet.run((short) 0, i);
             runForAllOutputs(1, instructionSet.getInputToOutput().values());
@@ -148,35 +153,35 @@ public class Day24Old extends Day<Long, Long> {
         }
 
         private void isEqual(Map<Variable, Short> values) {
-            var variable = Variable.fromString(parameters.get(0));
+            var variable = Variable.fromString(parameters.getFirst());
             var value1 = values.getOrDefault(variable, (short) 0);
             var value2 = getStringValueOrVariableValue(parameters.get(1), values);
             values.put(variable, (short) (value1 == value2 ? 1 : 0));
         }
 
         private void mod(Map<Variable, Short> values) {
-            var variable = Variable.fromString(parameters.get(0));
+            var variable = Variable.fromString(parameters.getFirst());
             var value1 = values.getOrDefault(variable, (short) 0);
             var value2 = getStringValueOrVariableValue(parameters.get(1), values);
             values.put(variable, (short) (value1 % value2));
         }
 
         private void divide(Map<Variable, Short> values) {
-            var variable = Variable.fromString(parameters.get(0));
+            var variable = Variable.fromString(parameters.getFirst());
             var value1 = values.getOrDefault(variable, (short) 0);
             var value2 = getStringValueOrVariableValue(parameters.get(1), values);
             values.put(variable, (short) (value1 / value2));
         }
 
         private void multiply(Map<Variable, Short> values) {
-            var variable = Variable.fromString(parameters.get(0));
+            var variable = Variable.fromString(parameters.getFirst());
             var value1 = values.getOrDefault(variable, (short) 0);
             var value2 = getStringValueOrVariableValue(parameters.get(1), values);
             values.put(variable, (short) (value1 * value2));
         }
 
         private void add(Map<Variable, Short> values) {
-            var variable = Variable.fromString(parameters.get(0));
+            var variable = Variable.fromString(parameters.getFirst());
             var value1 = values.getOrDefault(variable, (short) 0);
             var value2 = getStringValueOrVariableValue(parameters.get(1), values);
             values.put(variable, (short) (value1 + value2));
@@ -191,7 +196,7 @@ public class Day24Old extends Day<Long, Long> {
         }
 
         private void setInput(Map<Variable, Short> values, short newValue) {
-            values.put(Variable.fromString(parameters.get(0)), newValue);
+            values.put(Variable.fromString(parameters.getFirst()), newValue);
         }
     }
 
